<resources>
    <string name="app_name">Al-Quran</string>
    <string name="quran">1–30 жүз</string>
    <string name="juz1">1 жүз</string>
    <string name="juz2">2 жүз</string>
    <string name="juz3">3 жүз</string>
    <string name="juz4">4 жүз</string>
    <string name="juz5">5 жүз</string>
    <string name="juz6">6 жүз</string>
    <string name="juz7">7 жүз</string>
    <string name="juz8">8 жүз</string>
    <string name="juz9">9 жүз</string>
    <string name="juz10">10 жүз</string>
    <string name="juz11">11 жүз</string>
    <string name="juz12">12 жүз</string>
    <string name="juz13">13 жүз</string>
    <string name="juz14">14 жүз</string>
    <string name="juz15">15 жүз</string>
    <string name="juz16">16 жүз</string>
    <string name="juz17">17 жүз</string>
    <string name="juz18">18 жүз</string>
    <string name="juz19">19 жүз</string>
    <string name="juz20">20 жүз</string>
    <string name="juz21">21 жүз</string>
    <string name="juz22">22 жүз</string>
    <string name="juz23">23 жүз</string>
    <string name="juz24">24 жүз</string>
    <string name="juz25">25 жүз</string>
    <string name="juz26">26 жүз</string>
    <string name="juz27">27 жүз</string>
    <string name="juz28">28 жүз</string>
    <string name="juz29">29 жүз</string>
    <string name="juz30">30 жүз</string>
    <string name="noInet">Интернетті тексеріңіз!!!</string>
    <string name="book">Кітап</string>
    <string name="settings">Баптаулар</string>
</resources>